--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -279,6 +279,13 @@
         transform: scale(1);
     }
 
+    // Check / Radio list
+    .k-radio-list {
+        .k-radio-label {
+            line-height: $checkbox-size * 1.25;
+        }
+    }
+
     .k-fieldset {
         margin: $fieldset-margin;
         border-width: 1px 0 0;
